Fri Jun  9 07:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ARGV.{h,cpp,inl}:
          Refactored ACE_ARGV to ACE_ARGV_T which is a template, where ACE_ARGV is
          now a typedef of ACE_ARGV_T<ACE_TCHAR>. Taken the idea from the wchar
          work of David Giovannini <giovannd at ociweb dot com>

        * ace/ace.mpc:
        * ace/Makefile.am:
          ARGV.cpp added to the template files, added the new netlink files

        * ace/OS_NS_sys_stat.{h,inl}:
        * ace/MMAP_Memory_Pool{h,cpp}:
        * ace/Mem_Map.{h,cpp,inl}:
        * ace/Filecache.{h,cpp}:
        * ace/FILE_IO.cpp:
        * ace/FILE.h:
          Use ACE_LOFF_T for the filesize so that we can support files bigger then
          2Gb on windows and other platforms. Also use for Borland the 64bit stat
          structure and api's. This fixes bugzilla bug 1286, thanks to Ruslan Zasukhin
          <sunshine at public dot kherson dot ua> for reporting this.

Thu Jun  8 17:13:42 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/String_Base.h,
          ace/Array_Map.h: Removed the @deprecated
          comments to make Ossama happy ;-)  This fixes bugid 2558.

Thu Jun  8 12:44:46 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl (recursive_mutex_lock): Cleaned up the
          structure of the code here so that we don't try to release the
          nesting lock unless it was acquired successfully.  Thanks to
          J.T. for reporting this.

Thu Jun  8 12:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/corba_e_compact.mpb:
        * bin/MakeProjectCreator/config/corba_e_micro.mpb:
          New base projects for CORBA/e micro and compact

Thu Jun  8 12:28:49 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/DependencyGenerator/DependencyEditor.pm:
        * bin/DependencyGenerator/DependencyGenerator.pm: